opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/resource_cache"
bug-reports: "https://github.com/janestreet/resource_cache/issues"
dev-repo: "git+https://github.com/janestreet/resource_cache.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async"
  "core"
  "ppx_driver"
  "ppx_jane"
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "1.0"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
General resource cache

This library offers a functor to create a resource cache over some
abstract [Resource] type. The cache enables resource reuse while
obeying various limits.
"
