opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/resource_cache"
bug-reports: "https://github.com/janestreet/resource_cache/issues"
dev-repo: "git+https://github.com/janestreet/resource_cache.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async"
  "core"
  "ppx_jane"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
General resource cache

This library offers a functor to create a resource cache over some
abstract [Resource] type. The cache enables resource reuse while
obeying various limits.
"
