opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/resource_cache"
bug-reports: "https://github.com/janestreet/resource_cache/issues"
dev-repo: "git+https://github.com/janestreet/resource_cache.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/resource_cache/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async_kernel"
  "async_rpc_kernel"
  "core"
  "ppx_jane"
  "dune"             {>= "3.17.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "General resource cache"
description: "
This library offers a functor to create a resource cache over some
abstract [Resource] type. The cache enables resource reuse while
obeying various limits.
"
